src/styles/components/TreatmentSection.scss
@import "../variables.scss";
.treatment-container {
  width: 100%;
  height: 100%;
  display: flex;

  .aligner {
    width: 50%;
    height: 100%;
    background-position: 75% 50%;
    background-size: 160%;
    transition: all 0.5s ease;

    &:hover {
      background-size: 165%;
    }
  }
  .ästhetische {
    width: 50%;
    height: 100%;
    background-position: 50% 100%;
    background-size: 152%;
    transition: all 0.5s ease;

    &:hover {
      background-size: 157%;
    }
  }
  .Präprothetische {
    width: 50%;
    height: 100%;
    background-position: 47% 50%;
    background-size: 132%;
    transition: all 0.5s ease;

    &:hover {
      background-size: 137%;
    }
  }
  .Kombinierte {
    width: 50%;
    height: 100%;
    background-position: 47% 50%;
    background-size: 130%;
    transition: all 0.5s ease;

    &:hover {
      background-size: 135%;
    }
  }
  .Digitale {
    width: 50%;
    height: 100%;
    background-position: 2% 50%;
    background-size: 142%;
    transition: all 0.5s ease;

    &:hover {
      background-size: 147%;
    }
  }
  .Rezidiv {
    width: 50%;
    height: 100%;
    background-size: 137%;
    background-position: 90% 50%;
    transition: all 0.5s ease;
    &:hover {
      background-size: 142%;
    }
  }

  .treatment-right {
    width: 50%;
    height: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    .tratment-right-title {
      color: $white;
      font-family: "Merri";
      font-size: 3.4rem;
      font-weight: 900;
      line-height: 54px;
      letter-spacing: 1.5px;
      width: 90%;
      text-align: left;
    }
    .tratment-right-txt {
      color: $gray-1;
      font-family: "Merri-sans";
      width: 90%;
      font-size: $large;
      line-height: 30px;
      text-align: left;
    }
  }
}

@media screen and (max-width: 480px) {
  .treatment-container {
    flex-direction: column-reverse !important;
    .treatment-left {
      width: 100%;
      height: 32%;
      background-size: cover !important;
    }
    .treatment-right {
      width: 100%;
      height: 68%;
      align-items: center;
      justify-content: center;

      .tratment-right-title {
        font-size: $medium;
        line-height: 24px;
        width: 95%;
        // background-color: red;
        margin-bottom: 0px;
        display: flex;
        align-items: flex-end;
        justify-content: flex-start;
      }
      .tratment-right-txt {
        width: 95%;
        font-size: $x-small;
        line-height: 20px;
        // background-color: black;
        display: flex;
        align-items: flex-start;
        justify-content: center;
      }
    }
    .aligner {
      width: 100%;
      height: 35%;
      background-position: 50% 30%;
      background-size: cover;

      &:hover {
        background-size: cover;
      }
    }
    .ästhetische {
      width: 100%;
      height: 35%;
      background-position: 50% 80%;
      background-size: cover;
      transition: all 0.5s ease;

      &:hover {
        background-size: cover;
      }
    }
    .Präprothetische {
      width: 100%;
      height: 35%;
      background-position: center;
      background-size: cover;
      transition: all 0.5s ease;

      &:hover {
        background-size: cover;
      }
    }
    .Kombinierte {
      width: 100%;
      height: 35%;
      background-position: 50% 30%;
      background-size: cover;
      transition: all 0.5s ease;

      &:hover {
        background-size: cover;
      }
    }
    .Digitale {
      width: 100%;
      height: 35%;
      background-position: 50% 35%;
      background-size: cover;
      transition: all 0.5s ease;

      &:hover {
        background-size: cover;
      }
    }
    .Rezidiv {
      width: 100%;
      height: 35%;
      background-size: cover;
      background-position: 50% 50%;
      transition: all 0.5s ease;
      &:hover {
        background-size: cover;
      }
    }
  }
}

